kubernetes/cluster/kube-system/dashboard/ingress.yaml
# Service: Kubernetes Dashboard
# Ingress: k8s.brhd.io
# Label: app.kubernetes.io/name: kubernetes-dashboard
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kube-system
  labels:
    app.kubernetes.io/name: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: lets-encrypt
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Authorization "Bearer token";
spec:
  rules:
    - host: k8s.brhd.io
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 443
  tls:
    - hosts:
        - k8s.brhd.io
